--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "[LINUX][DEBUG][BUILLD][libculTests_static]",
+            "label": "[LINUX][DEBUG][BUILLD][tests]",
             "type": "shell",
             "command": "cmake",
             "args": [
@@ -14,7 +14,7 @@
                 "DEBUG",
                 "-j16",
                 "--target",
-                "libculTests_static"
+                "tests"
             ],
             "presentation": {
                 "echo": true,
@@ -32,107 +32,7 @@
         {
             "label": "[LINUX][CMAKE][CREATE][DEBUG]",
             "type": "shell",
-            "command": "./CreateProjects.sh Debug",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": [
-                "$gcc"
-            ]
-        },
-        {
-            "label": "[LINUX][BUILD][DEBUG]",
-            "type": "shell",
-            "command": "clear && cmake --build Build-Linux --config DEBUG -j64",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": [
-                "$gcc"
-            ]
-        },
-        {
-            "label": "[LINUX][BUILD][DEBUG][05_Shaders]",
-            "type": "shell",
-            "command": "clear && cmake --build Build-Linux --target 05_Shaders --config DEBUG -j12",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": [
-                "$gcc"
-            ]
-        },
-        {
-            "label": "[LINUX][BUILD][DEBUG][09_Camera_refactor]",
-            "type": "shell",
-            "command": "clear && cmake --build Build-Linux --target 09_Camera_refactor --config DEBUG -j12",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": [
-                "$gcc"
-            ]
-        },
-        {
-            "label": "[LINUX][BUILD][DEBUG][04_Hello-Triangle_refactor]",
-            "type": "shell",
-            "command": "clear && cmake --build Build-Linux --target 04_Hello-Triangle_refactor --config DEBUG -j1",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": [
-                "$gcc"
-            ]
-        },
-        {
-            "label": "[LINUX][BUILD][DEBUG][09_Camera_refactor]",
-            "type": "shell",
-            "command": "clear && cmake --build Build-Linux --target 09_Camera_refactor --config DEBUG -j12",
+            "command": "cmake -S . -B Build-Linux -DCMAKE_BUILD_TYPE=Debug",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -167,406 +67,6 @@
             },
             "options": {
                 "cwd": "${workspaceFolder}"
-            }
-        },
-        {
-            "label": "[WINDOWS][CMAKE][CREATE][RELEASE]",
-            "type": "shell",
-            "command": "cmake .. -DCMAKE_BUILD_TYPE=Release",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "options": {
-                "cwd": "Build-Windows"
-            }
-        },
-        {
-            "label": "[WINDOWS][BUILD][All Clean]",
-            "type": "shell",
-            "command": "cmake --build Build-Windows --config DEBUG -j16 --clean-first",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "options": {
-                "cwd": "Build-Windows"
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][00_GameEngine_static]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "--target",
-                "gameengine_static"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][04_Hello-Triangle]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j16",
-                "--target",
-                "04_Hello-Triangle"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ]
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][04_Hello-Triangle_refactor]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j16",
-                "--target",
-                "04_Hello-Triangle_refactor"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "dedicated",
-                "showReuseMessage": true,
-                "clear": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ]
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][05_Shaders]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j16",
-                "--target",
-                "05_Shaders"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][05_Shaders_refactor]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j8",
-                "--target",
-                "05_Shaders_refactor"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][06_Textures_refactor]",
-            "type": "shell",
-            "command": "cmake --build . --config DEBUG --target 06_Textures_refactor",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "options": {
-                "cwd": "Build-Windows"
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][09_Camera]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j16",
-                "--target",
-                "09_Camera"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][09_Camera_refactor]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j16",
-                "--target",
-                "09_Camera_refactor"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][10_Lighting_Colors]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j16",
-                "--target",
-                "10_Lighting_Colors"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][10_Lighting_Colors_refactor]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build Build-Windows",
-                "--config DEBUG",
-                "-j16",
-                "--target 10_Lighting_Colors_refactor"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][11_Basic_Lighting]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j16",
-                "--target",
-                "11_Basic_Lighting"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][11_Basic_Lighting_refactor]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j16",
-                "--target",
-                "11_Basic_Lighting_refactor"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
-            }
-        },
-        {
-            "label": "[WINDOWS][DEBUG][BUILLD][ALL]",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "Build-Windows",
-                "--config",
-                "DEBUG",
-                "-j16"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$msCompile"
-            ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true
             }
         }
     ]
