--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,34 +19,19 @@ include_directories(src)
 file( GLOB_RECURSE SOURCES inc/*.hpp src/*.hpp src/*.cpp )
 source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
 
-add_executable(${EXEC} ${SOURCES})
+set(TEST_EXEC_NAME ${EXEC}_bin)
+add_executable(${TEST_EXEC_NAME} ${SOURCES})
+
+target_link_libraries(${TEST_EXEC_NAME} memutil gtest gmock )
+target_include_directories(${TEST_EXEC_NAME} PRIVATE inc)
+target_include_directories(${TEST_EXEC_NAME} PRIVATE src)
 
 if (MSVC)
-    set_target_properties(
-        ${EXEC}
-        PROPERTIES
-            OUTPUT_NAME ${EXEC}
-            SUFFIX ".exe"
-    )
-else()
-    set_target_properties(
-        ${EXEC}
-        PROPERTIES
-            OUTPUT_NAME ${EXEC}
-            SUFFIX ".bin"
-    )
-endif()
-
-target_link_libraries(${EXEC} memutil gtest gmock )
-target_include_directories(${EXEC} PRIVATE inc)
-target_include_directories(${EXEC} PRIVATE src)
-
-if (MSVC)
-    set_target_properties( ${EXEC} PROPERTIES LINK_FLAGS "/INCREMENTAL:NO" )
+    set_target_properties( ${TEST_EXEC_NAME} PROPERTIES LINK_FLAGS "/INCREMENTAL:NO" )
 
     message( "[MU test] Setting MU tests run dir to: ${CMAKE_CURRENT_SOURCE_DIR}" )
-    set_target_properties( ${EXEC} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
-    set_target_properties( ${EXEC} PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS  "--gtest_break_on_failure" )
+    set_target_properties( ${TEST_EXEC_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
+    set_target_properties( ${TEST_EXEC_NAME} PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS  "--gtest_break_on_failure" )
 
     if( ${CMAKE_BUILD_TYPE} MATCHES "Debug" )
         set( GTEST_BIN gtestd )
@@ -55,6 +40,10 @@ if (MSVC)
         set( GTEST_BIN gtest )
         set( GMOCK_BIN gmock )
     endif()
-
-    set( GTEST_OUTPUT_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/bin/${CMAKE_BUILD_TYPE} )
 endif()
+
+set(MU_BINARY_DIR $ENV{MU_ROOT_DIR}/bin)
+message("MU_BINARY_DIR: ${MU_BINARY_DIR}")
+add_custom_command(TARGET ${TEST_EXEC_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${TEST_EXEC_NAME}> ${MU_BINARY_DIR}
+)
