--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,17 +4,35 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "[LINUX][DEBUG][BUILLD][run_tests]",
+            "type": "shell",
+            "command": "${workspaceFolder}/bin/tests_bin",
+            "args": [],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "dedicated",
+                "showReuseMessage": false,
+                "clear": true
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "dependsOn": "[LINUX][DEBUG][BUILLD][tests]"
+        },
+        {
             "label": "[LINUX][DEBUG][BUILLD][tests]",
             "type": "shell",
             "command": "cmake",
             "args": [
                 "--build",
-                "Build-Linux",
+                "Build",
                 "--config",
                 "DEBUG",
                 "-j16",
                 "--target",
-                "tests"
+                "tests_bin"
             ],
             "presentation": {
                 "echo": true,
@@ -32,7 +50,7 @@
         {
             "label": "[LINUX][CMAKE][CREATE][DEBUG]",
             "type": "shell",
-            "command": "cmake -S . -B Build-Linux -DCMAKE_BUILD_TYPE=Debug",
+            "command": "cmake -S . -B Build -DCMAKE_BUILD_TYPE=Debug",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -48,6 +66,50 @@
             "problemMatcher": [
                 "$gcc"
             ]
+        },
+        {
+            "label": "[Win64][DEBUG][BUILLD][run_tests]",
+            "type": "shell",
+            "command": "${workspaceFolder}/bin/tests_bin",
+            "args": [],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "dedicated",
+                "showReuseMessage": false,
+                "clear": true
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "dependsOn": "[Win64][DEBUG][BUILLD][tests]"
+        },
+        {
+            "label": "[Win64][DEBUG][BUILLD][tests]",
+            "type": "shell",
+            "command": "cmake",
+            "args": [
+                "--build",
+                "Build-Windows",
+                "--config",
+                "DEBUG",
+                "-j16",
+                "--target",
+                "tests_bin"
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "dedicated",
+                "showReuseMessage": false,
+                "clear": true
+            },
+            "problemMatcher": [
+                "$msCompile"
+            ],
+            "dependsOn": "[WINDOWS][CMAKE][CREATE][DEBUG]"
         },
         {
             "label": "[WINDOWS][CMAKE][CREATE][DEBUG]",
