--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required (VERSION 3.5)
+
 #cmake -DCMAKE_BUILD_TYPE=Debug
 
 get_filename_component( basename ${CMAKE_CURRENT_SOURCE_DIR} NAME )
