--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -54,7 +54,7 @@ jobs:
 
     - name: Configure CMake
       working-directory: ${{github.workspace}}/Build
-      run: cmake .. -DCMAKE_BUILD_TYPE=Debug
+      run: cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
@@ -64,5 +64,4 @@ jobs:
     - name: Test
       # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      shell: cmd
-      run: ${{github.workspace}}/bin/tests_bin
+      run: ctest -C ${{ matrix.build_type }} -V
